--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>3-Digit Code Guessing Game</title>
+<title>Form Class Bonding Game</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -27,13 +27,13 @@
     <div id="hint"></div>
 
     <h1><u>HINTS:</u></h1>
-    <ul>
+    
         <li>234 - two number are correct, one is well placed and the other wrongly placed</li>
         <li>567 - nothing is correct</li>
         <li>564 - one number is correct and well placed</li>
         <li>401 - two number are correct but wrongly placed</li>
         <li>124 - two number are correct, one is well placed and the other wrongly placed</li>
-    </ul>
+    
 
     <script>
         const code = "314";
